--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,10 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: mysql2
+  encoding: utf8
+  database: railsblog
+  pool: 5
+  username: railsblog
+  password: 410749277
+  socket: /var/run/mysqld/mysqld.sock
